--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
   <hr>
   <label for="player1">X</label>
   <input type="text" id="player1" placeholder="Nome do Jogador 1">
-  <label for="player2">O</label>
-  <input type="text" id="player2" placeholder="Nome do Jogador 2">
+  <div class="sumir">
+      <label for="player2">O</label>
+      <input type="text" id="player2" placeholder="Nome do Jogador 2">
+  </div>
   <button id="start">Começar!</button>
   <button id="reiniciar">reiniciar</button>
-  <h2>Vez de: <span id="turnPlayer"></span></h2>
+  <div class="sumir">
+      <h2>Vez de: <span id="turnPlayer"></span></h2>
+  </div>
   <section id="gameBoard">
     <div class="board">
       <div class="row">
