--- a/index.html
+++ b/index.html
@@ -7,38 +7,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>jogo da velha</h1>
-  <hr>
-  <label for="player1">X</label>
-  <input type="text" id="player1" placeholder="Nome do Jogador 1">
-  <div class="sumir">
-      <label for="player2">O</label>
-      <input type="text" id="player2" placeholder="Nome do Jogador 2">
-  </div>
-  <button id="start">Começar!</button>
-  <button id="reiniciar">reiniciar</button>
-  <div class="sumir">
-      <h2>Vez de: <span id="turnPlayer"></span></h2>
-  </div>
-  <section id="gameBoard">
+    <h1>jogo da velha</h1>
+    <hr>
+    <label for="player1" style="margin-right: 2px;">X</label>
+    <input type="text" id="player1" placeholder="Nome do Jogador 1"> <br>
+    <label for="player2">O</label>
+    <input type="text" id="player2" placeholder="Nome do Jogador 2"> <br>
+    <div id="centralizar">
+        <button id="start">Começar!</button>
+        <button id="reiniciar">reiniciar</button>
+    </div>
+    <h2><span id="vencedo"></span></h2>
+        <h2 id="h2">Vez de: <span id="turnPlayer"></span></h2>
+    <section id="gameBoard">
     <div class="board">
-      <div class="row">
-          <div class="cell" data-positon="0.0"></div>
-          <div class="cell" data-positon="0.1"></div>
-          <div class="cell" data-positon="0.2"></div>
-      </div>
-      <div class="row">
-          <div class="cell" data-positon="1.0"></div>
-          <div class="cell" data-positon="1.1"></div>
-          <div class="cell" data-positon="1.2"></div>
-      </div>
-      <div class="row">
-          <div class="cell" data-positon="2.0"></div>
-          <div class="cell" data-positon="2.1"></div>
-          <div class="cell" data-positon="2.2"></div>
-      </div>
-  </div>
-  </section>
+        <div class="row">
+            <div class="cell" data-positon="0.0"></div>
+            <div class="cell" data-positon="0.1"></div>
+            <div class="cell" data-positon="0.2"></div>
+        </div>
+        <div class="row">
+            <div class="cell" data-positon="1.0"></div>
+            <div class="cell" data-positon="1.1"></div>
+            <div class="cell" data-positon="1.2"></div>
+        </div>
+        <div class="row">
+            <div class="cell" data-positon="2.0"></div>
+            <div class="cell" data-positon="2.1"></div>
+            <div class="cell" data-positon="2.2"></div>
+        </div>
+    </div>
+    </section>
 </body>
 <script src="script.js"></script>
 </html>
